(fix) content scale too small

--- a/src/meta.css
+++ b/src/meta.css
@@ -51,6 +51,8 @@ body {
 }
 
 #write {
-    padding-left: 22ch;
-    padding-right: 22ch;
+    padding-left: 8ch;
+    padding-right: 8ch;
+    max-width: 900px;
+    margin: 0 auto;
 }
